# supplieranalyzer

./: .gitignore  Procfile.txt  README.md  app.py  audit_report.xlsx  database.py  pyproject.toml  requirements.txt  utils.py
attached_assets/: Copie de Loi_69-21_Audit_Interactif(1) V2.xlsx  Pasted-Donn-es-Fournisseurs-Colonnes-Nom-du-fournisseur-Date-de-commande-Montant-de-la-commande-Date-d-1747134222998.txt
data/: suppliers.db
pages/: 1_analyse_retards.py  2_gestion_bfr.py  3_calcul_penalites.py  4_tableau_fournisseurs.py  5_suivi_tresorerie.py  6_ratios_financiers.py  7_resume_audit.py  8_saisie_manuelle.py
