[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.45.1",
    "xlsxwriter>=3.2.3",
]
